@@ -29,11 +29,11 @@
       <essential/>
       <frozen/>
     </group>
-    <group name="proposed">
+<!--<group name="proposed">
       <description>Proposed GNOME desktop and developer platform software.</description>
       <essential/>
       <frozen/>
-    </group>
+    </group>-->
   </release>
   <release name="HEAD">
     <group name="fifth-toe">
@@ -89,8 +89,8 @@
     </version>
   </module>
   <module name="atomix">
-    <version release="gnome-2.14">
-      <component name="atomix" dir="atomix" group="proposed">
+    <version release="HEAD">
+      <component name="atomix" dir="atomix" group="extras">
         <podir dir="po"/>
         <potname name="atomix.pot"/>
         <branch name="HEAD"/>
@@ -315,7 +315,7 @@
   </module>
   <module name="deskbar-applet">
     <version release="gnome-2.14">
-      <component name="deskbar-applet" dir="deskbar-applet" group="proposed">
+      <component name="deskbar-applet" dir="deskbar-applet" group="desktop">
         <podir dir="po"/>
         <potname name="deskbar-applet.pot"/>
         <branch name="HEAD"/>
@@ -607,7 +607,7 @@
   </module>
   <module name="fast-user-switch-applet">
     <version release="gnome-2.14">
-      <component name="fast-user-switch-applet" dir="fast-user-switch-applet" group="proposed">
+      <component name="fast-user-switch-applet" dir="fast-user-switch-applet" group="desktop">
         <podir dir="po"/>
         <potname name="fast-user-switch-applet.pot"/>
         <branch name="HEAD"/>
@@ -1504,8 +1504,8 @@
     </version>
   </module>
   <module name="gnome-power-manager">
-    <version release="gnome-2.14">
-      <component name="gnome-power-manager" dir="gnome-power-manager" group="proposed">
+    <version release="HEAD">
+      <component name="gnome-power-manager" dir="gnome-power-manager" group="extras">
         <podir dir="po"/>
         <potname name="gnome-power-manager.pot"/>
         <branch name="HEAD"/>
@@ -1527,7 +1527,7 @@
   </module>
   <module name="gnome-screensaver">
     <version release="gnome-2.14">
-      <component name="gnome-screensaver" dir="gnome-screensaver" group="proposed">
+      <component name="gnome-screensaver" dir="gnome-screensaver" group="desktop">
         <podir dir="po"/>
         <potname name="gnome-screensaver.pot"/>
         <branch name="HEAD"/>
@@ -2517,7 +2517,7 @@
   </module>
   <module name="pessulus">
     <version release="gnome-2.14">
-      <component name="pessulus" dir="pessulus" group="proposed">
+      <component name="pessulus" dir="pessulus" group="desktop">
         <podir dir="po"/>
         <potname name="pessulus.pot"/>
         <branch name="HEAD"/>
@@ -2558,8 +2558,8 @@
     </version>
   </module>
   <module name="nautilus-actions">
-    <version release="gnome-2.14">
-      <component name="nautilus-actions" dir="nautilus-actions" group="proposed">
+    <version release="HEAD">
+      <component name="nautilus-actions" dir="nautilus-actions" group="extras">
         <podir dir="po"/>
         <potname name="nautilus-actions.pot"/>
         <branch name="HEAD"/>
@@ -2841,7 +2841,7 @@
   </module>
   <module name="sabayon">
     <version release="gnome-2.14">
-      <component name="sabayon" dir="sabayon" group="proposed">
+      <component name="sabayon" dir="sabayon" group="desktop">
         <podir dir="po"/>
         <potname name="sabayon.pot"/>
         <branch name="HEAD"/>
