@@ -1,5 +1,10 @@
 2006-02-12  Christian Rose  <menthos@menthos.com>
 
+	* translation-status.xml: Moved new modules according to final
+	module list from proposed to desktop, and the rest to extras.
+
+2006-02-12  Christian Rose  <menthos@menthos.com>
+
 	* translation-status.xml: gnome-icon-theme has
 	been branched for gnome-2-14.
 
